<resources>
    <string name="app_name">DuangDee</string>
    <string name="url_server">http://10.13.3.124</string>
    <string name="port_3000">:3000</string>
    <string name="port_4000">:4000</string>
    <string name="port_5000">:5000</string>
    <string name="api_login">/api/login</string>
    <string name="api_login_uid">/api/login-uid</string>
    <string name="api_register">/api/register</string>
    <string name="api_register_uid">/api/register-uid</string>
    <string name="api_check_uid">/api/check-uid</string>
    <string name="api_check_email">/api/check-email</string>
    <string name="api_check_username">/api/check-username</string>
    <string name="api_request_register">/api/request-register</string>
    <string name="api_request_password">/api/request-password</string>
    <string name="api_reset_password">/api/reset-password</string>
    <string name="api_verify_otp">/api/verify-otp</string>
    <string name="api_verify_token">/api/VerifyToken</string>
    <string name="api_get_profile">/api/get-profile/</string>
    <string name="api_update_profile">/api/update-profile/</string>
    <string name="api_update_profile_image">/api/update-profile-image/</string>
    <string name="api_delete_profile_image">/api/delete-profile-image/</string>
    <string name="api_check_zodiac">/api/check-zodiac</string>
    <string name="api_get_zodiac">/api/get-zodiac/</string>
    <string name="api_palmprint_ai">/api/palmprint-ai</string>
    <string name="api_add_playhand">/api/add-playhand</string>
    <string name="api_get_handdetail">/api/get-handdetail/</string>
    <string name="api_get_card">/api/get-card/</string>
    <string name="api_get_count_card">/api/get-count-card</string>
    <string name="api_add_playcard">/api/add-playcard</string>
    <string name="api_get_playcard_top7">/api/get-playcard-top7/</string>
    <string name="title_home">หน้าหลัก</string>
    <string name="title_dashboard">สรุป</string>
    <string name="title_duduang">ดูดวง</string>
    <string name="title_history">ประวัติ</string>
    <string name="title_profile">โปรไฟล์</string>
    <string name="title_email_user">Email/Username</string>
    <string name="title_Email">Email</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_name">Name</string>
    <string name="title_firstname">First Name</string>
    <string name="title_lastname">Last Name</string>
    <string name="title_displayname">Display Name</string>
    <string name="title_surname">Surname</string>
    <string name="title_dateofbirth">Date of Birth</string>
    <string name="title_day">Day</string>
    <string name="title_month">Month</string>
    <string name="title_year">Year</string>
    <string name="title_gender">Gender</string>
    <string name="title_phone">Phone number</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_register_with">Register WITH</string>
    <string name="title_loading">Loading</string>
    <string name="title_Forgot">Forgot password?</string>
    <string name="title_not_account">Don\'t have account?</string>
    <string name="title_create_account">สร้างบัญชีของคุณ</string>
    <string name="title_edit_profile">แก้ไขบัญชีของคุณ</string>
    <string name="txt_email">E-mail :</string>
    <string name="txt_password">Password :</string>
    <string name="txt_username">Username :</string>
    <string name="txt_confirm_password">Confirm Password :</string>
    <string name="txt_name">Name :</string>
    <string name="txt_surname">Surname :</string>
    <string name="txt_dateofbirth">Date of Birth :</string>
    <string name="txt_gender">Gender :</string>
    <string name="txt_phone">Phone number:</string>
    <string name="bt_next">ถัดไป</string>
    <string name="bt_calendar">calendar</string>
    <string name="bt_save">บันทึก</string>
    <string name="bt_back">กลับ</string>
    <string name="bt_send_email">ส่งอีเมล</string>
    <string name="bt_confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="bt_confirm">ยืนยัน</string>
    <string name="bt_confirm_otp">CONFIRM OTP</string>
    <string name="bt_sign_out">Sign Out</string>
    <string name="bt_login">LOGIN</string>
    <string name="bt_login_google">Login With Google</string>
    <string name="bt_register">REGISTER</string>
    <string name="privacy_policy">ท่านยอมรับใน <u>นโยบายความเป็นส่วนตัว</u></string>
    <string name="privacy_policy_text">
        <b>1. บทนำ\n\n</b>
        \t\t\t1.1 ขอต้อนรับสู่ DuangDee แพลตฟอร์มที่ดำเนินการโดย DuangDee8 Company Limited  และบริษัทในกลุ่มและบริษัทในเครือ (เรียกแยกและเรียกรวมกันว่า “Shopee”, “เรา”, “พวกเรา” หรือ “ของเรา”) Shopee มีหน้าที่รับผิดชอบภายใต้กฎหมายและข้อบังคับความเป็นส่วนตัวที่บังคับใช้(“กฎหมายคุ้มครองข้อมูลส่วนบุคคล”) อย่างจริงจัง และยึดมั่นต่อการเคารพสิทธิและให้ความสำคัญเกี่ยวกับความเป็นส่วนตัวของผู้ใช้เว็บไซต์และแอปพลิเคชันบนมือถือ Shopee ทั้งหมด (เรียกรวมกันว่า “แพลตฟอร์ม”) (เราเรียกแพลตฟอร์มและบริการที่เรามอบให้ดังที่ระบุไว้ในแพลตฟอร์มของเราโดยรวมว่า (“บริการ”) และ “ผู้ใช้” หมายถึง ผู้ใช้ที่มีบัญชีซึ่งได้ลงทะเบียนกับเราและใช้แพลตฟอร์ม (เรียกแยกและเรียกรวมกันว่า “ผู้ใช้” “คุณ” หรือ “ของคุณ”) เราตระหนักถึงความสำคัญของข้อมูลส่วนบุคคลที่คุณมอบให้แก่เรา และเชื่อว่าเรามีหน้าที่รับผิดชอบในการจัดการ ปกป้อง และดำเนินการข้อมูลส่วนบุคคลของคุณอย่างเหมาะสม นโยบายความเป็นส่วนตัวนี้ (“นโยบายความเป็นส่วนตัว” หรือ “นโยบาย”) ได้รับการออกแบบมาเพื่อช่วยให้คุณเข้าใจเกี่ยวกับวิธีที่เราเก็บรวบรวม ใช้ เปิดเผย และ/หรือดำเนินการข้อมูลส่วนบุคคลที่คุณมอบให้แก่เราและ/หรือข้อมูลของคุณที่เราครอบครองไม่ว่าจะในปัจจุบันหรืออนาคต รวมทั้งยังเป็นข้อมูลประกอบการตัดสินใจก่อนที่คุณจะให้ข้อมูลส่วนตัวใดๆ แก่เรา โปรดอ่านนโยบายความเป็นส่วนตัวนี้โดยละเอียด หากคุณมีข้อสงสัยเกี่ยวกับข้อมูลเหล่านี้หรือข้อปฏิบัติว่าด้วยความเป็นส่วนตัวของเรา โปรดดูส่วนของหัวข้อ “มีคำถาม ข้อกังวล หรือคำร้องเรียนใช่หรือไม่ โปรดติดต่อเรา” ในตอนท้ายของนโยบายความเป็นส่วนตัวนี้\n\n
        \t\t\t1.2  “ข้อมูลส่วนบุคคล” หมายถึง ข้อมูลเกี่ยวกับบุคคลไม่ว่าจริงหรือเท็จที่สามารถใช้เป็นข้อมูลที่ระบุตัวตนของบุคคลผู้นั้น หรือจากข้อมูลดังกล่าวหรือข้อมูลอื่นๆ ที่องค์กรมีหรืออาจสามารถเข้าถึงได้ ตัวอย่างข้อมูลส่วนบุคคลที่พบบ่อยได้แก่ ชื่อ หมายเลขประจำตัว และข้อมูลการติดต่อ\n\n
        \t\t\t1.3 ในการใช้บริการการลงทะเบียนบัญชีกับเรา เยี่ยมชมแพลตฟอร์ม และ/หรือเข้าถึงบริการ คุณได้รับทราบและตกลงว่าคุณยอมรับข้อปฏิบัติ ข้อกำหนด และ/หรือนโยบายที่กำหนดไว้ในนโยบายความเป็นส่วนตัวนี้ และคุณยินยอมให้เราเก็บรวบรวม ใช้ เปิดเผย และ/หรือดำเนินการข้อมูลส่วนบุคคลของคุณดังที่ระบุไว้ในนโยบายความเป็นส่วนตัวนี้ หากคุณไม่ยินยอมให้เราดำเนินการข้อมูลส่วนบุคคลของคุณดังที่ระบุไว้ในนโยบายความเป็นส่วนตัวนี้ โปรดอย่าใช้บริการหรือเข้าถึงแพลตฟอร์ม หากเราเปลี่ยนแปลงนโยบายความเป็นส่วนตัวของเรา เราจะแจ้งให้คุณทราบซึ่งรวมถึงการโพสต์การเปลี่ยนแปลงดังกล่าวหรือนโยบายความเป็นส่วนตัวที่แก้ไขบนแพลตฟอร์ม เราขอสงวนสิทธิ์ในการแก้ไขนโยบายความเป็นส่วนตัวนี้ในทุกเมื่อโดยภายใต้ขอบเขตสูงสุดที่อนุญาตโดยกฎหมายที่ใช้บังคับในการเข้าใช้บริการหรือแพลตฟอร์มรวมถึงการทำคำสั่งซื้อผลิตภัณฑ์อย่างต่อเนื่องของคุณต่อไปภายหลังการแก้ไขนั้นถือว่าคุณรับทราบและยอมรับการแก้ไขของนโยบายความเป็นส่วนตัวนี้\n\n
        \t\t\t1.4 นโยบายนี้ใช้บังคับร่วมกับการบอกกล่าวข้อสัญญา ข้อตกลงให้ความยินยอมใดๆ ที่เกี่ยวข้องกับการเก็บรวบรวม ใช้ เปิดเผย และ/หรือประมวลผลข้อมูลส่วนบุคคลของคุณโดยเรา โดยนโยบายนี้จะไม่ได้มีผลบังคับเหนือกว่าการบอกกล่าว หรือข้อสัญญาและข้อตกลงใดๆ เว้นแต่เราจะได้กำหนดไว้โดยชัดแจ้งเป็นอย่างอื่น\n\n
        \t\t\t1.5 นโยบายนี้ใช้สำหรับทั้งผู้ซื้อ ผู้ขาย พาร์ทเนอร์ผู้ขับขี่ และร้านค้า ผู้ใช้บริการของเรา เว้นแต่จะได้กำหนดไว้โดยชัดแจ้งเป็นอย่างอื่น\n\n

        <b>2. Shopee จะเก็บรวบรวมข้อมูลส่วนบุคคลเมื่อใด?\n\n</b>
        \t\t\t2.1 เราจะ/อาจเก็บรวบรวมข้อมูลส่วนบุคคลของคุณเมื่อ:\n
        \t\t\t\t\t(ก) เมื่อคุณได้เข้าถึงและ/หรือใช้บริการหรือแพลตฟอร์มของเรา หรือลงทะเบียนสมัครบัญชีผู้ใช้กับเรา\n
        \t\t\t\t\t(ข) เมื่อคุณส่งแบบฟอร์ม รวมถึงแต่ไม่จำกัดเพียง แบบฟอร์มการสมัครหรือแบบฟอร์มอื่นๆ ที่เกี่ยวข้องกับผลิตภัณฑ์และบริการของเรา ไม่ว่าจะแบบออนไลน์หรือแบบฟอร์มเป็นเอกสาร\n
        \t\t\t\t\t(ค) เมื่อคุณทำข้อตกลงใดๆ หรือให้เอกสารหรือข้อมูลอื่นใดที่เกี่ยวข้องกับการติดต่อระหว่างคุณกับเราหรือเมื่อคุณใช้ผลิตภัณฑ์และบริการของเรา\n
        \t\t\t\t\t(ง) เมื่อคุณติดต่อกับเรา เช่น ผ่านทางโทรศัพท์ (ซึ่งจะได้รับการบันทึก) จดหมาย แฟกซ์ การประชุมแบบเห็นหน้ากัน แพลตฟอร์มสื่อทางสังคม และอีเมล รวมถึงเมื่อคุณได้ติดต่อกับตัวแทนให้บริการลูกค้า (customer service agents)\n
        \t\t\t\t\t(จ) เมื่อคุณใช้บริการทางอิเล็กทรอนิกส์ หรือติดต่อกับเราผ่านแพลตฟอร์มหรือใช้บริการ ซึ่งรวมถึงแต่ไม่จำกัดเพียงการใช้ผ่านคุกกี้ ซึ่งเราอาจปรับใช้เมื่อคุณใช้หรือเข้าถึงแอปพลิเคชันหรือเว็บไซต์\n
        \t\t\t\t\t(ฉ) เมื่อคุณได้อนุญาตโดยผ่านอุปกรณ์ของคุณ ให้เปิดเผยข้อมูลใดๆ แก่แอปพลิเคชันหรือแพลตฟอร์มของเรา\n
        \t\t\t\t\t(ช) เมื่อคุณเชื่อมโยงบัญชี DuangDee กับบัญชีสื่อสังคมออนไลน์ (Social Media Account) หรือบัญชีผู้ใช้งานอื่นของคุณ หรือใช้ฟีเจอร์สื่อสังคมออนไลน์อื่น (Social Media Features) ภายใต้นโยบายการให้บริการของผู้ให้บริการฟีเจอร์นั้นๆ\n
        \t\t\t\t\t(ซ) เมื่อคุณดำเนินธุรกรรมผ่านบริการของเรา\n
        \t\t\t\t\t(ฌ) เมื่อคุณให้ความคิดเห็นหรือคำร้องเรียนแก่เรา\n
        \t\t\t\t\t(ญ) เมื่อคุณลงทะเบียนเข้าร่วมกิจกรรมการแข่งขัน\n
        \t\t\t\t\t(ฎ) เมื่อคุณส่งข้อมูลส่วนบุคคลของคุณให้แก่เราด้วยเหตุผลใดก็ตามนโยบายดังกล่าวข้างต้นไม่ได้อ้างไว้โดยละเอียดถี่ถ้วนและเป็นเพียงตัวอย่างทั่วไปเมื่อเราเก็บรวบรวมข้อมูลส่วนบุคคลเกี่ยวกับคุณ\n\n

        \t\t\t2.2 เราอาจเก็บรวบรวมข้อมูลส่วนบุคคลของคุณจากคุณ บริษัทในเครือของเรา บุคคลที่สาม และจากแหล่งอื่นซึ่งรวมถึงแต่ไม่จำกัดเพียง คู่ค้าทางธุรกิจ (เช่น บริษัทผู้ให้บริการขนส่ง หรือผู้ให้บริการรับชำระเงิน) ผู้ให้บริการข้อมูลเครดิตหรือผู้ประเมินเครดิต ผู้ให้บริการด้านการตลาด รายการส่งเสริมการขายร่วมกับพันธมิตร รายการส่งเสริมการขายแบบแนะนำสมาชิก โปรแกรมการเป็นลูกค้าอย่างต่อเนื่อง ผู้ใช้บริการคนอื่น ๆ หรือข้อมูลสาธารณะ หรือข้อมูลจากหน่วยงานราชการ\n\n
        \t\t\t2.3 ในบางกรณี คุณอาจให้ข้อมูลส่วนบุคคลของบุคคลอื่นแก่เรา (เช่น บุคคลในครอบครัวของคุณ เพื่อน หรือบุคคลในรายชื่อติดต่อของคุณ) หากคุณได้ให้ข้อมูลส่วนบุคคลดังกล่าวแก่เรา คุณยืนยันและรับรองว่าคุณได้ขอความยินยอมจากบุคคลดังกล่าวเพื่อการประมวลผลข้อมูลส่วนบุคคลตามนโยบายนี้แล้ว\n
    </string>
    <string name="txt_empty" />
    <string name="contact">Contact</string>
    <string name="txt_txt_01">ตั้งค่ารหัสผ่านใหม่</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_talot">TalotActivity</string>
</resources>