<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/logo_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/logo_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_horoscope"
        android:icon="@drawable/logo_duduang"
        android:title="ดูดวง"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/logo_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/logo_profile"
        android:title="@string/title_profile" />
</menu>