<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisName_Activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".ui.register.RegisNameActivity">


    <LinearLayout
        android:id="@+id/layout_head_regis_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014">

        <TextView
            android:id="@+id/txt_regis_create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/line_regis_email"
            android:layout_width="match_parent"
            android:layout_height="1.1dp"
            app:srcCompat="@drawable/img_line_4" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_head_regis_name">

        <TextView
            android:id="@+id/txt_regis_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextRegisName"
            style="@style/input_info"
            android:autofillHints="@string/title_name"
            android:hint="@string/title_name"
            android:inputType="text"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_name">

        <TextView
            android:id="@+id/txt_regis_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_surname"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextRegisSurname"
            style="@style/input_info"
            android:layout_marginTop="10dp"
            android:hint="@string/title_surname"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_dateofbirth"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_surname">

        <TextView
            android:id="@+id/txt_regis_dateofbirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_dateofbirth"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextRegisDate"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/title_day"
                android:background="@drawable/shape_edit"
                android:ems="10"
                android:hint="@string/title_day"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/blank"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slad1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="/"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/editTextRegisMonth"
                android:layout_width="75dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/title_month"
                android:background="@drawable/shape_edit"
                android:ems="10"
                android:hint="@string/title_month"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/blank"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="/"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/editTextRegisYear"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/title_year"
                android:background="@drawable/shape_edit"
                android:ems="10"
                android:hint="@string/title_year"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/blank"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/logo_calendar"
                android:contentDescription="@string/bt_calendar" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_gender"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_dateofbirth">

        <TextView
            android:id="@+id/txt_regis_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_gender"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/gold"
            android:dropDownWidth="wrap_content"
            android:foreground="@drawable/shape_edit"
            android:paddingHorizontal="15dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_gender">

        <TextView
            android:id="@+id/txt_regis_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_phone"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextRegisPhone"
            style="@style/input_info"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/title_password"
            android:hint="@string/title_phone"
            android:inputType="text"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_next_regis_name"
        style="@style/button_gold"
        android:layout_marginBottom="70dp"
        android:text="@string/bt_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>